depois de alguns testes cheguei a conclusão que esse seria a forma mais adequada para o encoder